--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 anyhow = "1.0.94"
 colored = "2.2.0"
 discord-rich-presence = "0.2.5"
+dotenv = "0.15.0"
 hhmmss = "0.1.0"
 mpris = "2.0.1"
 regex = "1.11.1"
